Tweak spacing, fix tags

--- a/app/(root)/homepage.css
+++ b/app/(root)/homepage.css
@@ -12,6 +12,7 @@ main.main-container {
   position: relative;
   background-color: var(--color-bg);
   z-index: 10;
+  padding: 2rem 0;
 }
 
 section#about {
